# AutoPyCraft

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
autopycraft/: cli.py  utils.py
autopycraft/setup_scripts/: setup_flask.py  setup_pygame.py
autopycraft/templates/django_project/: README.md
project_setup/: cli.py  utils.py
pycraft/: cli.py
pycraft/setup_scripts/: django_setup.py  setup_fastapi.py
pycraft/templates/django_project/: README.md
pycraft/templates/fastapi_project/: README.md
pycraft/templates/flask_project/: README.md
pycraft/templates/pygame_project/: README.md
