[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoPyCraft"
version = "0.1"
description = "A CLI tool for setting up Python Project Structures"
authors = [
    {name = "N-Thander", email = "nasiruddinthander2002@gmail.com"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "click",
]

[project.scripts]
setup-project = "project_setup.cli:setup"

[tool.setuptools]
packages = ["project_setup"]
include-package-data = true  

[tool.setuptools.package-data]  
project_setup = ["templates/*"]  
